--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,22 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>be.ac.umons.infortech</groupId>
-	<artifactId>odl-tp2</artifactId>
-	<name>odl-tp2</name>
+	<artifactId>mpa-tp2</artifactId>
+	<name>mpa-tp2</name>
+	<!-- FIXME change it to the project's website -->
+	<url>http://www.example.com</url>
 
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.enforcer.require.version>[11,)</maven.enforcer.require.version>
+		<maven.enforcer.require.message>Please use at least Java 11</maven.enforcer.require.message>
+		<java.main.class>exercice1.Exercise1</java.main.class>
+
 	</properties>
 
 	<dependencies>
@@ -36,17 +44,17 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
 				</configuration>
 			</plugin>
 			<!-- Make sure that the right JDK is used. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
-				<version>3.0.0-M1</version>
+				<version>3.0.0-M2</version>
 				<executions>
 					<execution>
 						<id>enforce-versions</id>
@@ -56,14 +64,43 @@
 						<configuration>
 							<rules>
 								<requireJavaVersion>
-									<version>[1.8,9)</version>
-									<message>Please use java 1.8</message>
+									<version>${maven.enforcer.require.version}</version>
+									<message>${maven.enforcer.require.message}</message>
 								</requireJavaVersion>
 							</rules>
 
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.2</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>${java.main.class}</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.6.0</version>
+				<configuration>
+					<mainClass>${java.main.class}</mainClass>
+					<!--
+					<arguments>
+					  <argument>5000</argument>
+					</arguments>
+					-->
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>3.0.0-M1</version>
 			</plugin>
 			<!-- Generate documentation -->
 			<plugin>
