--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,9 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.1.2</version>
+				<version>3.2.0</version>
 				<configuration>
 					<archive>
 						<manifest>
@@ -86,9 +87,14 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>3.0.0-M1</version>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.6.0</version>
+				<version>3.0.0</version>
 				<configuration>
 					<mainClass>${java.main.class}</mainClass>
 					<!--
@@ -97,10 +103,6 @@
 					</arguments>
 					-->
 				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-install-plugin</artifactId>
-				<version>3.0.0-M1</version>
 			</plugin>
 			<!-- Generate documentation -->
 			<plugin>
@@ -111,12 +113,12 @@
 					<dependency>
 						<groupId>org.asciidoctor</groupId>
 						<artifactId>asciidoctorj-pdf</artifactId>
-						<version>1.5.0-beta.7</version>
+						<version>1.6.0</version>
 					</dependency>
 				</dependencies>
 				<configuration>
 					<backend>pdf</backend>
-					<sourceHighlighter>coderay</sourceHighlighter>
+					<!--<sourceHighlighter>coderay</sourceHighlighter>-->
 					<!--attributes>
 						<imagesdir>${project.build.directory}/generated-docs</imagesdir>
 						<imagesoutdir>${project.build.directory}/generated-docs</imagesoutdir>
